--- a/lab-1/index.html
+++ b/lab-1/index.html
@@ -75,6 +75,9 @@
 
 
     <div class="green-container">
+        <button style="position: absolute;left:0;top:0;">
+            Sagar
+        </button>
         <p class="free-paragraph">Free</p>
         <h1>Online Code Editor</h1>
         <p>Beginner</p>
@@ -94,8 +97,19 @@
         <div class="circle">2 <br><br> Create the structural aspect</div>
         <div class="circle">3 <br><br> Create the structural aspect</div>
     </div>
+    <br>
+    <br>
+    <div style="text-align:right;margin-right: 30px;">
+        <button>View the project</button>
+    </div>
+    <!-- 
+    <div style="margin-right: 30px;">
+        <span class="anything" style="float: right;">View the project</span>
+    </div> -->
 
-    <div></div>
+   
+
+
 </body>
 
 </html>
