--- a/positions/index.html
+++ b/positions/index.html
@@ -14,11 +14,10 @@
         .orange {
             background-color: orange;
         }
-
+        
         .lightblue {
-             background-color: lightblue; 
-            /* position: relative;
-            top:0 */ 
+            background-color: lightblue; 
+            position: absolute;            
         }
 
         .green {
