--- a/units/index.html
+++ b/units/index.html
@@ -10,6 +10,7 @@
         html {
             font-size: 40px;
         }
+
         /* .red {
             background-color: red;
             height: 100px;
@@ -36,7 +37,8 @@
 
         .blue {
             background-color: blue;
-            width: 150%;
+            width: 50%;
+            height: 100px;
         }
 
         .pink {
@@ -65,9 +67,22 @@
 
 <body>
 
+
+    <!-- <div class="pink">
+        <div class="blue">
+            <div class="red"></div>
+        </div>
+    </div> -->
+    
+    <!-- <div style="width: 800px;">
+        <div class="blue"></div>
+    </div> -->
+
+
+
     <!-- <div style="width: 50vmax;height: 50px;background-color: red"></div> -->
 
-    <!-- <div style="font-size: 20px;">
+    <div style="font-size: 20px;">
 
         <span style="font-size: 3em;">Apple</span>
         <span style="font-size: 0.5em;">Banana</span>
@@ -78,7 +93,7 @@
             <span style="font-size: 1rem;">sagar</span>
         </div>
 
-    </div> -->
+    </div>
 
 
 
